Fixed some layout issues as per PR comments.

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -124,8 +124,6 @@ a.header-link {
 }
 
 .comments-container {
-  width: 800px;
-  max-width: 98%;
   padding-top: 10px;
   margin: auto;
   margin-bottom: 100px;
